# spectra

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/core/: app.py
src/core/dtos/: analisys_dtos.py  steps_dtos.py  transcriptions_dtos.py
src/use_cases/: audio_context_analyser.py  speech_classifier.py
tests/: conftest.py  test_app.py  test_audio_context_analyser.py  test_speech_classifier.py
